unpackaged/main/default/objects/Case/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>indicate timeframe in which change needs to be implemented</description>
    <inlineHelpText>indicate timeframe in which change needs to be implemented. E.G.: don&#39;t migrate until... OR: needs to be live by...</inlineHelpText>
    <label>Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>