unpackaged/main/default/objects/Case/fields/Send_Activity_Report__c.field-meta.xml
<CustomField>
    <fullName>Send_Activity_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Activity Report</label>
    <type>Checkbox</type>
</CustomField>