unpackaged/main/default/objects/Case/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup for the service categories object</description>
    <inlineHelpText>Select the applicable Service Category for this request</inlineHelpText>
    <label>Service Category</label>
    <referenceTo>Service_Category__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>