unpackaged/main/default/objects/Case/fields/Service_Credits_SLA_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Service_Credits_SLA_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Credits / SLA Reporting</label>
    <type>Checkbox</type>
</CustomField>