unpackaged/main/default/objects/Case/fields/SFCAB_Status__c.field-meta.xml
<CustomField>
    <fullName>SFCAB_Status__c</fullName>
    <description>State of Salesforce Change Request case record (for internal use only).</description>
    <inlineHelpText>State of Salesforce Change Request</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
                <default>true</default>
                <label>Dev</label>
            </value>
            <value>
                <fullName>Dev Completed</fullName>
            </value>
            <value>
                <fullName>Pending UAT</fullName>
            </value>
            <value>
                <fullName>Approved UAT</fullName>
            </value>
            <value>
                <fullName>Applied UAT</fullName>
            </value>
            <value>
                <fullName>Pending PROD</fullName>
            </value>
            <value>
                <fullName>Approved PROD</fullName>
            </value>
            <value>
                <fullName>Applied PROD</fullName>
            </value>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>