unpackaged/main/default/objects/Case/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <description>Skills required during provision of consulting services.</description>
    <inlineHelpText>Skills required during provision of consulting services.</inlineHelpText>
    <label>Skills Required</label>
    <type>TextArea</type>
</CustomField>