unpackaged/main/default/objects/Case/fields/Sort_Priortiy__c.field-meta.xml
<CustomField>
    <fullName>Sort_Priortiy__c</fullName>
    <formula>if(ISPICKVAL(Priority , &quot;Critical&quot;) &amp;&amp; (ispickval(Status, &quot;New&quot;) || ispickval(Status, &quot;In Progress&quot;)), 1, 

if(ISPICKVAL(Priority , &quot;Critical&quot;) &amp;&amp; (ispickval(Status, &quot;Awaiting Customer&quot;)), 2, 

if(ISPICKVAL(Priority , &quot;Critical&quot;) &amp;&amp; not(ispickval(Status, &quot;Closed&quot;) || ispickval(Status, &quot;Resolved&quot;)), 3, 


if(ISPICKVAL(Priority , &quot;Urgent&quot;) &amp;&amp; (ispickval(Status, &quot;New&quot;) || ispickval(Status, &quot;In Progress&quot;)), 4, 

if(ISPICKVAL(Priority , &quot;Urgent&quot;) &amp;&amp; (ispickval(Status, &quot;Awaiting Customer&quot;)), 5, 

if(ISPICKVAL(Priority , &quot;Urgent&quot;) &amp;&amp; not(ispickval(Status, &quot;Closed&quot;) || ispickval(Status, &quot;Resolved&quot;)), 6, 


if(ISPICKVAL(Priority , &quot;High&quot;) &amp;&amp; (ispickval(Status, &quot;New&quot;) || ispickval(Status, &quot;In Progress&quot;)), 7, 

if(ISPICKVAL(Priority , &quot;High&quot;) &amp;&amp; (ispickval(Status, &quot;Awaiting Customer&quot;)), 8, 

if(ISPICKVAL(Priority , &quot;High&quot;) &amp;&amp; not(ispickval(Status, &quot;Closed&quot;) || ispickval(Status, &quot;Resolved&quot;)), 9, 


if(ISPICKVAL(Priority , &quot;Medium&quot;) &amp;&amp; (ispickval(Status, &quot;New&quot;) || ispickval(Status, &quot;In Progress&quot;)), 10, 

if(ISPICKVAL(Priority , &quot;Medium&quot;) &amp;&amp; (ispickval(Status, &quot;Awaiting Customer&quot;)), 11, 

if(ISPICKVAL(Priority , &quot;Medium&quot;) &amp;&amp; not(ispickval(Status, &quot;Closed&quot;) || ispickval(Status, &quot;Resolved&quot;)), 12, 13))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>