unpackaged/main/default/objects/Case/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <inlineHelpText>The source environment for the refresh e.g. ABC. Note: The target environment will be overridden with configuration from all products in this source. If you wish to only refresh certain products, please let us know in the description.</inlineHelpText>
    <label>Source Environment</label>
    <length>150</length>
    <type>Text</type>
</CustomField>