unpackaged/main/default/objects/Case/fields/Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Status_Change__c</fullName>
    <description>This field will be populated when a case field is set to resolved and waiting on a reply.</description>
    <label>Status Change</label>
    <type>DateTime</type>
</CustomField>