unpackaged/main/default/objects/Case/fields/Steps_to_reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_reproduce__c</fullName>
    <description>Used to Document the steps to reproduce the customer&#39;s issue - supports screenshots and rich text</description>
    <inlineHelpText>Please document as accurately as possible, the steps to reproduce the issue including screenshots, step-by-step guidance, log files, etc.</inlineHelpText>
    <label>Steps to reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>