unpackaged/main/default/objects/Case/fields/Support_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Support_Analysis__c</fullName>
    <label>Support Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>