unpackaged/main/default/objects/Case/fields/Support_Case_Score__c.field-meta.xml
<CustomField>
    <fullName>Support_Case_Score__c</fullName>
    <description>To store the prioritisation of this case for Support</description>
    <label>Support Case Score</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>