unpackaged/main/default/objects/Case/fields/Support_One_AR_Link__c.field-meta.xml
<CustomField>
    <fullName>Support_One_AR_Link__c</fullName>
    <description>Provides a hyperlink to the SupportOne web application</description>
    <label>Support One AR Link</label>
    <type>Url</type>
</CustomField>