unpackaged/main/default/objects/Case/fields/Support_One_AR_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_One_AR_Number__c</fullName>
    <description>Used during data migration so the customer knows the originating AR Number</description>
    <label>Support One AR Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>