unpackaged/main/default/objects/Case/fields/Support_SLA_Customer__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA_Customer__c</fullName>
    <formula>IF(
(
RecordType.DeveloperName = &quot;Incident&quot;&amp;&amp;
NOT(ISBLANK(TEXT(Account.Support_SLA_Customer__c)))
),
TEXT(Account.Support_SLA_Customer__c)
,&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support SLA Customer</label>
    <type>Text</type>
</CustomField>