unpackaged/main/default/objects/Case/fields/Support_SLA_Customer_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA_Customer_Indicator__c</fullName>
    <formula>IF(
   (Service_Credits_SLA_Reporting__c = TRUE),
    image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=0150f00003G8TZv&amp;oid=00D2O0000009e0J&quot;,&quot;*&quot;)
   ,&quot;&quot;
  )</formula>
    <inlineHelpText>This case is subject to service credits and/or SLA reporting</inlineHelpText>
    <label>SLA Case Indicator</label>
    <type>Text</type>
</CustomField>