unpackaged/main/default/objects/Case/fields/Suspected_Package_App__c.field-meta.xml
<CustomField>
    <fullName>Suspected_Package_App__c</fullName>
    <description>This will be used by Support Team to provide the Development team the suspected Package or App the issue resides in</description>
    <label>Suspected Package/App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>