unpackaged/main/default/objects/Case/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>