unpackaged/main/default/objects/Case/fields/T1Account__c.field-meta.xml
<CustomField>
    <fullName>T1Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T1Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>