unpackaged/main/default/objects/Case/fields/Target_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Delivery_Date__c</fullName>
    <formula>IF(not( 
ISBLANK( Service_Category__c )),CASE(MOD( DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c)- DATE(1900, 1, 7), 7),0, DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c +1), 1, DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c), 2, DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c), 3, DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c), 4, DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c), 5,DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c), 6,DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c + 2), DATEVALUE(CreatedDate + Service_Category__r.Delivery_Target__c)),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Delivery Date</label>
    <type>Date</type>
</CustomField>