unpackaged/main/default/objects/Case/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <inlineHelpText>The target/destination environment for the request (environment to refresh, upgrade, or changes to email configuration) e.g. ABC, ABC-TEST, ABC-UAT</inlineHelpText>
    <label>Target Environment</label>
    <length>150</length>
    <type>Text</type>
</CustomField>