unpackaged/main/default/objects/Case/fields/Task_Code__c.field-meta.xml
<CustomField>
    <fullName>Task_Code__c</fullName>
    <label>Task Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>