unpackaged/main/default/objects/Case/fields/Task_Code_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Task_Code_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Code Assigned</label>
    <type>Checkbox</type>
</CustomField>