unpackaged/main/default/objects/Case/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <formula>IF( ISPICKVAL(Account.CountryArea__c,&#39;Australia&#39;), $Setup.Country_Tax_Rates__c.Australia__c, 
IF( ISPICKVAL(Account.CountryArea__c,&#39;United Kingdom&#39;), $Setup.Country_Tax_Rates__c.United_Kingdom__c , 
IF( ISPICKVAL(Account.CountryArea__c ,&#39;New Zealand&#39;), $Setup.Country_Tax_Rates__c.New_Zealand__c , 
IF( ISPICKVAL(Account.CountryArea__c ,&#39;Asia&#39;), $Setup.Country_Tax_Rates__c.Asia__c , 
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>