unpackaged/main/default/objects/Case/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Fixed Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ci</fullName>
            </value>
            <value>
                <fullName>CiAnywhere</fullName>
            </value>
            <value>
                <fullName>Ci³</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>