unpackaged/main/default/objects/Case/fields/Time_Await_Res_Alloc__c.field-meta.xml
<CustomField>
    <fullName>Time_Await_Res_Alloc__c</fullName>
    <description>The total work days between Awaiting Resource Allocation and Scheduled, calculated using the default business hours.</description>
    <inlineHelpText>The total work days to resource the case after the customer has approved the quote, calculated using the default business hours.</inlineHelpText>
    <label>Time Awaiting Resource Allocation</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>