unpackaged/main/default/objects/Case/fields/Timed_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Timed_Item_Total__c</fullName>
    <description>Sum of the Time from related Timed Item records</description>
    <inlineHelpText>Sum of the Time from related Timed Item records</inlineHelpText>
    <label>Timed Item Total</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>