unpackaged/main/default/objects/Case/fields/Total_Billable_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Time__c</fullName>
    <description>Timed Item total where Work Type does not contain &#39;Non-Billable&#39;.</description>
    <label>Total Billable Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>