unpackaged/main/default/objects/Case/fields/Total_Engagement_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Engagement_Days__c</fullName>
    <description>Total Engagement Days</description>
    <inlineHelpText>Inclusive of travel time if applicable</inlineHelpText>
    <label>Total Engagement Days</label>
    <summarizedField>Engagement_Activity__c.Number_of_Days__c</summarizedField>
    <summaryForeignKey>Engagement_Activity__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>