unpackaged/main/default/objects/Case/fields/Total_Excl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Excl_Tax__c</fullName>
    <label>Total Excl Tax</label>
    <summarizedField>Engagement_Activity__c.Activity_Total__c</summarizedField>
    <summaryForeignKey>Engagement_Activity__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>