unpackaged/main/default/objects/Case/fields/Total_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Incl_Tax__c</fullName>
    <formula>Total_Excl_Tax__c +  Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total price of engagement excluding travel expenses</inlineHelpText>
    <label>Total Incl Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>