unpackaged/main/default/objects/Case/fields/Total_Incl_Tax_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Incl_Tax_Out__c</fullName>
    <formula>Total_Incl_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Incl_Tax_Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>