unpackaged/main/default/objects/Case/fields/Total_Non_billable_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_billable_Time__c</fullName>
    <formula>Timed_Item_Total__c -  Total_Billable_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Non-billable Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>