unpackaged/main/default/objects/Case/fields/Troubleshooting_Guide_update_required__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Guide_update_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field on case resolution for marking a case as requiring a troubleshooting guide to be updated.</description>
    <label>Troubleshooting Guide Update Required</label>
    <type>Checkbox</type>
</CustomField>