unpackaged/main/default/objects/Case/fields/Update_MS_Warning__c.field-meta.xml
<CustomField>
    <fullName>Update_MS_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update Milestone Warning</description>
    <label>Update MS Warning</label>
    <type>Checkbox</type>
</CustomField>