unpackaged/main/default/objects/Case/fields/User_Interface__c.field-meta.xml
<CustomField>
    <fullName>User_Interface__c</fullName>
    <label>User Interface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ci</fullName>
            </value>
            <value>
                <fullName>Ci Anywhere</fullName>
            </value>
            <value>
                <fullName>DxP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>