unpackaged/main/default/objects/Case/fields/Variation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Variation_Reason__c</fullName>
    <label>Variation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change in Scope</fullName>
            </value>
            <value>
                <fullName>Additional Requirements Identified</fullName>
            </value>
            <value>
                <fullName>Insufficient Time</fullName>
            </value>
            <value>
                <fullName>System Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>