unpackaged/main/default/objects/Case/fields/What_are_the_risks__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_risks__c</fullName>
    <inlineHelpText>Document the risks associated with this change</inlineHelpText>
    <label>What are the risks?</label>
    <type>TextArea</type>
</CustomField>