unpackaged/main/default/objects/Case/fields/What_has_changed__c.field-meta.xml
<CustomField>
    <fullName>What_has_changed__c</fullName>
    <description>Used to document what has changed in the Customer&#39;s Environment</description>
    <inlineHelpText>Please document anything that has changed in the environment that may be relevant for the investigation.</inlineHelpText>
    <label>What has changed?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>