unpackaged/main/default/objects/Case/fields/Who_will_be_impacted__c.field-meta.xml
<CustomField>
    <fullName>Who_will_be_impacted__c</fullName>
    <description>Change Control case type field to indicate users impacted e.g. Support consultant, Customer, Sales</description>
    <inlineHelpText>indicate users impacted e.g. Support consultant, Customer, Sales</inlineHelpText>
    <label>Who will be impacted?</label>
    <type>TextArea</type>
</CustomField>