unpackaged/main/default/objects/Case/fields/Why_is_the_Change_needed__c.field-meta.xml
<CustomField>
    <fullName>Why_is_the_Change_needed__c</fullName>
    <description>Business Justification</description>
    <inlineHelpText>Business Justification</inlineHelpText>
    <label>Why is the Change needed?</label>
    <type>TextArea</type>
</CustomField>