unpackaged/main/default/objects/Case/fields/Work_around_Details__c.field-meta.xml
<CustomField>
    <fullName>Work_around_Details__c</fullName>
    <description>Used to document the work-around the Customer is using</description>
    <inlineHelpText>Please document the work-around with as much detail as possible</inlineHelpText>
    <label>Work-around details employed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>