unpackaged/main/default/objects/Case/recordTypes/Change_Control.recordType-meta.xml
<RecordType>
    <fullName>Change_Control</fullName>
    <active>true</active>
    <businessProcess>Change Management</businessProcess>
    <description>RFC Process for implementing changes to Salesforce</description>
    <label>Change Control</label>
</RecordType>