unpackaged/main/default/objects/Case/recordTypes/Cons_Q_or_I.recordType-meta.xml
<RecordType>
    <fullName>Cons_Q_or_I</fullName>
    <active>true</active>
    <businessProcess>Product Support Process</businessProcess>
    <label>Consultant Question or Issue</label>
</RecordType>