unpackaged/main/default/objects/Case/recordTypes/Consulting_Question.recordType-meta.xml
<RecordType>
    <fullName>Consulting_Question</fullName>
    <active>true</active>
    <businessProcess>S%26E Support Process</businessProcess>
    <description>When a T1 consultant has a question when working on a customer site.</description>
    <label>Consulting - Question</label>
</RecordType>