unpackaged/main/default/objects/Case/recordTypes/Consulting_Request.recordType-meta.xml
<RecordType>
    <fullName>Consulting_Request</fullName>
    <active>true</active>
    <businessProcess>AMS Consulting</businessProcess>
    <description>Use this option to request Consulting services</description>
    <label>I require Consulting services</label>
</RecordType>