unpackaged/main/default/objects/Case/recordTypes/I_require_an_AMS_service.recordType-meta.xml
<RecordType>
    <fullName>I_require_an_AMS_service</fullName>
    <active>true</active>
    <businessProcess>AMS Support Process</businessProcess>
    <description>Request for services offered by Application Managed Services</description>
    <label>I require an AMS service</label>
</RecordType>