unpackaged/main/default/objects/Case/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <businessProcess>Product Support Process</businessProcess>
    <description>Use this option if you are experiencing an issue with our software</description>
    <label>I am experiencing an issue</label>
</RecordType>