unpackaged/main/default/objects/Case/recordTypes/Problem.recordType-meta.xml
<RecordType>
    <fullName>Problem</fullName>
    <active>true</active>
    <businessProcess>S%26E Support Process</businessProcess>
    <description>Problem Record</description>
    <label>Problem</label>
</RecordType>