unpackaged/main/default/objects/Case/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <businessProcess>Product Support Process</businessProcess>
    <description>Select this to log a Question Case</description>
    <label>I have a Question</label>
</RecordType>