unpackaged/main/default/objects/Case/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <businessProcess>S%26E Support Process</businessProcess>
    <description>Used to log service requests</description>
    <label>Service Request</label>
</RecordType>