unpackaged/main/default/objects/Case/recordTypes/TechnologyOne_Cloud_Service_Request.recordType-meta.xml
<RecordType>
    <fullName>TechnologyOne_Cloud_Service_Request</fullName>
    <active>true</active>
    <businessProcess>S%26E Support Process</businessProcess>
    <description>Request for services offered by  TechnologyOne Cloud</description>
    <label>I require a TechnologyOne Cloud service</label>
</RecordType>