unpackaged/main/default/objects/Case/validationRules/Awaiting_Internal_Removed_Follow_up_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Awaiting_Internal_Removed_Follow_up_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Awaiting_Internal_Follow_up_Date__c) &amp;&amp; 
NOT(ISBLANK(TEXT(Awaiting_Internal_Area__c))) &amp;&amp; 
NOT(ISBLANK(PRIORVALUE(Awaiting_Internal_Area__c))) &amp;&amp; 
NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>Awaiting_Internal_Follow_up_Date__c</errorDisplayField>
    <errorMessage>You must set a follow-up date for the Awaiting Internal Area</errorMessage>
</ValidationRule>