unpackaged/main/default/objects/Case/validationRules/Cannot_Change_Case_State_if_Case_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Case_State_if_Case_On_Hold</fullName>
    <active>true</active>
    <description>Case State cannot be changed if the Change Request (Service Cloud) Case Status is equal to &#39;On Hold&#39;.</description>
    <errorConditionFormula>ISCHANGED( SFCAB_Status__c )
&amp;&amp;
(
 ISPICKVAL( Status , &quot;On Hold&quot;) 
&amp;&amp;  RecordType.Name = &#39;Change Control&#39;
&amp;&amp; NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)
)</errorConditionFormula>
    <errorDisplayField>SFCAB_Status__c</errorDisplayField>
    <errorMessage>Cannot Change Case State whilst the Case is On Hold</errorMessage>
</ValidationRule>