unpackaged/main/default/objects/Case/validationRules/Case_Reason_Required_upon_close.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Reason_Required_upon_close</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
RecordType.Name =&quot;I am experiencing an issue&quot;, 
RecordType.Name =&quot;I have a Question&quot;, 
RecordType.Name =&quot;I require an AMS service&quot;, 
RecordType.Name =&quot;I require a TechnologyOne Cloud service&quot;, 
RecordType.Name =&quot;Problem&quot;, 
RecordType.Name = &quot;Consulting - Question&quot;,
RecordType.Name = &quot;I require Consulting services&quot;), 
NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c ),
ISPICKVAL( Status ,&quot;Closed&quot;), 
ISBLANK(TEXT(Reason)))</errorConditionFormula>
    <errorMessage>Case reason required when closing a case.</errorMessage>
</ValidationRule>